# Evolut.io

./: Cargo.toml
assets/cuda/: test.cu
assets/shaders/: a.spv  agent_sensory_input_update.comp  ambience_descriptors.comp  block.comp  block.frag  block.vert  blocks.frag  blocks.vert  bone.comp  bones.comp  bones.frag  bones.vert  broad_phase_collision_detection.comp  broad_phase_collision_detection_cleanup.comp  collision_detection.comp  constants.comp  constraint.comp  data.comp  descriptors_ambience.comp  descriptors_ambient.comp  descriptors_compute.comp  descriptors_generate.comp  entity.comp  face.comp  feed_forward_net.comp  generate_faces.comp  generate_world_agents.comp  generate_world_copy.comp  generate_world_face_count_per_chunk.comp  generate_world_faces.comp  generate_world_stone_dirt_grass.comp  generate_world_update_meta.comp  grid.comp  indirect.comp  mobs.vert  muscle.comp  narrow_phase_collision_detection.comp  neural_net_layer.comp  orb.frag  orb.vert  (+35 more)
src/: block_world.rs  bone.rs  bones.rs  buffer.rs  command_pool.rs  data.rs  debug.rs  descriptor_binding.rs  descriptor_layout.rs  descriptor_pool.rs  device.rs  display.rs  fence.rs  foundations.rs  fps.rs  framebuffer.rs  frames_in_flight.rs  game.rs  gpu_future.rs  imageview.rs  input.rs  instance.rs  joint.rs  main.rs  particle.rs  particle_constants.rs  particles.rs  physics.rs  physics_timer.rs  pipeline.rs  platforms.rs  player.rs  render_pass.rs  sampler.rs  semaphore.rs  shader.rs  shader_module.rs  surface.rs  swap_chain.rs  texture.rs  (+4 more)
src/blocks/: block.rs  block_properties.rs  face.rs  (+9 more)
(+69 files in other folders)
