[package]
name = "evolut-io"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.24.0"
vulkano-win = "0.24.0"
vulkano-shaders = "0.24.0"
vulkano-shader-derive = "0.11.0"
winit = "0.25.0"
failure = "0.1.8"
nalgebra-glm = "0.14.0"
